Added Greg's changes

--- a/Template/explore-html/apply.html
+++ b/Template/explore-html/apply.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1,requiresActiveX=true">
     
     
-    <title> Portfolio :: Explore HTML5 Template </title>
+    <title> Apply :: Explore HTML5 Template </title>
     <meta name="description" content=" add description  ... ">
     
     <!-- /// Favicons ////////  -->
@@ -45,57 +45,10 @@
     <!-- <link rel="stylesheet" href="_layout/css/skins/default.css"> -->
     <!-- <link rel="stylesheet" href="_layout/css/skins/blue.css"> -->
     <!-- <link rel="stylesheet" href="_layout/css/skins/orange.css"> -->
+
     <link rel="stylesheet" href="custom/navbar.css">
-    <style type="text/css">
-    .portfolio-item-2 .portfolio-item-description h2 span{
-        border-left: 2px solid #CE4115;
-    }
-    .btn:hover {
-        border-color: #CE4115!important;
-        color: #CE4115!important;
-        background-color: #fff;
-    }
-    .portfolio-item-overlay{
-        background-color: #3A3A3C;
-    }
-    .portfolio-item-2{
-        border: 0px!important;
-    }
-    .portfolio-item-2:hover{
-        opacity: 1;
-    } 
-    .portfolio-item-overlay:hover { opacity: 0.9!important; }
-    .portfolio-item-preview{
-        height: 100%;
-        overflow: hidden;
-    }
-    .portfolio-item-preview > img{
-        max-height: 100%;
-        position: relative;
-        top: 50%;
-        transform: translateY(-50%);
-        padding: 0px;
-        vertical-align: middle;
-    }
-    @media (max-width: 767px) {
-        .portfolio-item-2 .portfolio-item-description h2 span{
-            border-left: 0;
-        }
-        .portfolio-item-2 .portfolio-item-description h2 span:before{
-            border-top: 0;
-        }
-        .portfolio-item-2 .portfolio-item-description h2 span{
-            border-bottom: 2px solid #CE4115;
-        }
-        .portfolio-item-preview > img{
-            position: relative;
-            top: 0;
-            padding: 0;
-            transform: translateY(0);
-        }
+ 
     
-    }
-    </style>
     
 </head>
 <body class="sticky-header page-header">
@@ -118,7 +71,7 @@
 
     <div id="wrap">
         
-        <div id="header-wrap" style="background-image:url(_content/backgrounds/1920x355-3.jpg);">
+        <div id="header-wrap" style="background-image:url(_content/backgrounds/1920x355-1.jpg);">
         
         <!-- /// HEADER WRAP  //////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 
@@ -232,151 +185,68 @@
                         
                         <div class="headline">
                             
-                            <h1 class="text-left">Portfolio Companies</h1>  
+                            <h1>Apply to NSH</h1>
+                            <h4>Sorry, NSH is not currently recruiting for any positions. Check back next quarter if you're interested!</h4>
                             
                         </div><!-- end .headline -->
                         
                     </div><!-- end .span12 -->
                 </div><!-- end .row -->
-            </div><!-- end .row-container -->
+            </div>  <!-- end .row-content -->                                                         
             
-            <div class="row-container">     
+           <div class="row-container">     
                 <div class="row">
-                    <div class="span12">
+                    <div class="span4">
                         
-                        <div class="portfolio-item-2 fixed">                    
-                                    
-                            <div class="portfolio-item-preview">
-                                
-                                <img src="https://media.licdn.com/media/p/3/005/0b5/2bb/3a7a957.png" alt="">
-                                
-                                <div class="portfolio-item-overlay">
-                                    
-                                    <a class="btn" href="http://www.designworks.nu/" target="_blank">Learn more</a>
-                                    
-                                </div><!-- end .portfolio-item-overlay -->
-                                
-                            </div><!-- end .portfolio-item-preview -->
-                            
-                            <div class="portfolio-item-description">
-                            
-                                <h2> 
-                                    <span>DesignWorks</span>
-                                </h2>
-                                
-                                <p>DesignWorks is a company devoted to offering high-quality design services to members and groups of the Northwestern community. The mission of DesignWorks is both to address the design needs of Northwestern as well as to generate design opportunities for talented.</p>
-                                
-                            </div><!-- end .portfolio-item-description -->
-                            
-                        </div><!-- end .portfolio-item -->
+                        <h3 class="text-uppercase"><strong>Position Title (ex. Tech Manager)</strong></h3>
                         
-                    </div><!-- end .span12 -->
+                        <p>
+                        <strong>***Replace this with a description of the position.***</strong><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis ex sapien, ut euismod mauris 
+                        egestas in. Aliquam et massa nibh. Ut sed felis nunc. Aliquam eleme ntum nunc vel mi lacinia, ut elementum dolor 
+                        porttitor. Pellentesque at dui convallis, mollis tellus a, interdum libero. Phasellus non viverra nisl. Mauris 
+                        hendrerit et ex id condimentum. Integer ut pharetra augue. . Aliquam erat volutpat. Donec luctus ornare vestibulum. 
+                        Nullam rutrum non dolor id vehicula.  </p>
+                        
+                        <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer vel nisi ante. 
+                        Aliquam erat volutpat. Donec luctus ornare vestibulum. Nullam rutrum non dolor id vehicula.Vestibulum ante ipsum 
+                        primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer vel nisi ante</p>
+                        
+                    </div><!-- end .span4 -->
+                    <div class="span4">
+                        
+                        <h3 class="text-uppercase"><strong>Position Title (ex. Tech Manager)</strong></h3>
+                        
+                        <p>
+                            <strong>***Replace this with a description of the position.***</strong><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis ex sapien, ut euismod 
+                            mauris egestas in.<br> 
+                            Aliquam et massa nibh. Ut sed felis nunc. Aliquam elementum nunc vel mi lacinia, ut elementum dolor porttitor. 
+                            Pellentesque at dui convallis, mollis tellus a, interdum libero. Phasellus non viverra nisl. Mauris hendrerit 
+                            et ex id condimentum. Integer ut pharetra augue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices 
+                            posuere cubilia Curae; Integer vel nisi ante. Aliquam erat volutpat. Donec luctus ornare vestibulum. Aliquam 
+                            erat volutpat. Donec luctus ornare vestibulum.  Mauris hendrerit et ex id condimentum. Integer ut pharetra augue. 
+                            Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer vel nisi ante
+                            erat volutpat.
+                        </p>
+                        
+                    </div><!-- end .span4 -->
+                    <div class="span4">
+                        
+                        <h3 class="text-uppercase"><strong>Position Title (ex. Tech Manager)</strong></h3>
+                        
+                        <p>
+                        <strong>***Replace this with a description of the position.***</strong><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis ex sapien, ut euismod mauris 
+                        egestas in. Aliquam et massa nibh. Ut sed felis nunc. Aliquam elementum nunc vel mi lacinia, ut elementum dolor 
+                        porttitor. Pellentesque at dui convallis, mollis tellus a, interdum libero. Phasellus non viverra nisl. </p>
+                        
+                        <p>Mauris hendrerit et ex id condimentum. Integer ut pharetra augue. Vestibulum ante ipsum primis in faucibus 
+                        orci luctus et ultrices posuere cubilia Curae; Integer vel nisi ante. Aliquam erat volutpat. Donec luctus ornare 
+                        vestibulum. Nullam rutrum non dolor id vehicula. Vestibulum rutrum eleifend erat,  Mauris hendrerit et ex id 
+                        condimentum. Integer ut pharetra augue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere 
+                        cubilia Curae; Integer vel nisi ante. Aliquam erat volutpat</p>
+                        
+                    </div><!-- end .span4 -->
                 </div><!-- end .row -->
-            </div><!-- end .row-container -->
-            
-            <div class="row-container">     
-                <div class="row">
-                    <div class="span12">
-                        
-                        <div class="portfolio-item-2 fixed">                    
-                                    
-                            <div class="portfolio-item-preview">
-                                
-                                <img src="_content/NSH/RezEssentials-logo.png" alt="">
-                                
-                                <div class="portfolio-item-overlay">
-                                    
-                                    <a class="btn" href="http://rezessentials.com/" target="_blank">Learn more</a>
-                                    
-                                </div><!-- end .portfolio-item-overlay -->
-                                
-                            </div><!-- end .portfolio-item-preview -->
-                            
-                            <div class="portfolio-item-description">
-                            
-                                <h2>
-                                    <span>RezEssentials</span>
-                                </h2>
-                                
-                                <p>RezEssentials simplifies the move-in process for incoming Northwestern students and their parents by providing a convenient solution for the sale, delivery, and move-in of essential residential elements. These products include futons, compact fridges, desk lamps, fans, and safes.</p>
-                                
-                            </div><!-- end .portfolio-item-description -->
-                            
-                        </div><!-- end .portfolio-item -->
-                        
-                    </div><!-- end .span12 -->
-                </div><!-- end .row -->
-            </div><!-- end .row-container -->
-            
-            <div class="row-container">     
-                <div class="row">
-                    <div class="span12">
-                        
-                        <div class="portfolio-item-2 fixed">                    
-                                    
-                            <div class="portfolio-item-preview">
-                                
-                                <img src="_content/NSH/boxco-logo.png" alt="">
-                                
-                                <div class="portfolio-item-overlay">
-                                    
-                                    <a class="btn" href="http://nuboxco.com/" target="_blank">Learn more</a>
-                                    
-                                </div><!-- end .portfolio-item-overlay -->
-                                
-                            </div><!-- end .portfolio-item-preview -->
-                            
-                            <div class="portfolio-item-description">
-                            
-                                <h2>
-                                    <span>BoxCo.</span>
-                                </h2>
-                                
-                                <p>BoxCo. provides the best in storage and shipping services at Northwestern University. BoxCo. aims to offer a more affordable and convenient service to the student body by making storage simple. BoxCo. was launched in May 2012. In addition to offering...</p>
-                                
-                            </div><!-- end .portfolio-item-description -->
-                            
-                        </div><!-- end .portfolio-item -->
-                        
-                    </div><!-- end .span12 -->
-                </div><!-- end .row -->
-            </div><!-- end .row-container -->   
-            
-            <div class="row-container">     
-                <div class="row">
-                    <div class="span12">
-                        
-                        <div class="portfolio-item-2 fixed">                    
-                                    
-                            <div class="portfolio-item-preview">
-                                
-                                <img src="_content/NSH/nututors-logo.png" alt="">
-                                
-                                <div class="portfolio-item-overlay">
-                                    
-                                    <a class="btn" href="http://www.nututors.com/" target="_blank">Learn more</a>
-                                    
-                                </div><!-- end .portfolio-item-overlay -->
-                                
-                            </div><!-- end .portfolio-item-preview -->
-                            
-                            <div class="portfolio-item-description">
-                            
-                                <h2>
-                                    <span>NU|Tutors</span>
-                                </h2>
-                                
-                                <p>NU|Tutors provides individual and group tutoring for local area high school students. Since its inception, the company has helped over 300 students with their academic needs and continues to make a positive impact on the North Shore community. With a...</p>
-                                
-                            </div><!-- end .portfolio-item-description -->
-                            
-                        </div><!-- end .portfolio-item -->
-                        
-                    </div><!-- end .span12 -->
-                </div><!-- end .row -->
-            </div><!-- end .row-container -->  
-            
-                                         
+            </div>  <!-- end .row-content -->
             
         <!-- //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 
@@ -395,7 +265,7 @@
                         
                             <ul>
                                 <li>
-                                    <a href="#">About us</a>
+                                    <a href="#">Apply</a>
                                 </li>
                                 <li>
                                     <a href="#">Team</a>
@@ -668,6 +538,8 @@
     <!-- /// Custom JS ////////  -->
     <script src="_layout/js/plugins.js"></script>   
     <script src="_layout/js/scripts.js"></script>
+    
+   
 
 </body>
 </html>
