--- a/Template/explore-html/portfolio-1.html
+++ b/Template/explore-html/portfolio-1.html
@@ -370,7 +370,7 @@
                         
                         <div class="headline">
                             
-                            <h1 class="text-left">Take a look at our portfolio</h1>
+                            <h1 class="text-left">Portfolio</h1>
                             <h4 class="text-left">Lorem ipsum consectetur adipiscing elit. Suspendisse eget <span class="text-highlight">enim ac tellus </span>lobortis</h4>
                             
                         </div><!-- end .headline -->
@@ -386,17 +386,16 @@
                     <div class="portfolio-item">
             
                         <div class="portfolio-item-preview">
-                            
-                            <img src="_content/portfolio/960x610-4.jpg" alt="">
+                            <!-- should be 960x610 -->
+                            <img src="http://www.northwesternstudentholdings.com/wp-content/uploads/2013/09/designworks-218x228.png" alt="">
                             
                             <div class="portfolio-item-overlay">
                                 
                                 <div class="portfolio-item-description">
                                     
-                                    <h2>Interior Design</h2>
+                                    <h2>DesignWorks</h2>
                                     
-                                    <p class="hidden-phone">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras maximus orci nec massa, 
-                                    vitae dignissim orci cursus. Donec commodo lorem vestibulum mi sagittis augue tincidunt.</p>
+                                    <p class="hidden-phone">DesignWorks is a company devoted to offering high-quality design services to members and groups of the Northwestern community. The mission of DesignWorks is both to address the design needs of Northwestern as well as to generate design opportunities for talented...</p>
                                     
                                     <a class="btn" href="portfolio-item.html">Learn more</a>
                                     
@@ -416,45 +415,15 @@
             
                         <div class="portfolio-item-preview">
                             
-                            <img src="_content/portfolio/960x610-2.jpg" alt="">
+                            <img src="http://www.northwesternstudentholdings.com/wp-content/uploads/2013/09/rez-218x228.png" alt="">
                             
                             <div class="portfolio-item-overlay">
                                 
                                 <div class="portfolio-item-description">
                                     
-                                    <h2>Interior Design</h2>
+                                    <h2>RezEssentials</h2>
                                     
-                                    <p class="hidden-phone">Mauris sed sodales sem. Morbi id sem in lectus volutpat malesuada eget nec neque. 
-                                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-                                    
-                                    <a class="btn" href="portfolio-item.html">Learn more</a>
-                                    
-                                </div><!-- end .portfolio-item-description -->
-                                
-                            </div><!-- end .portfolio-item-overlay -->
-                            
-                        </div><!-- end .portfolio-item-preview -->
-                        
-                    </div><!-- end .portfolio-item -->
-                    
-                </div><!-- item -->
-                
-                <div class="item width-1">
-                    
-                    <div class="portfolio-item">
-            
-                        <div class="portfolio-item-preview">
-                            
-                            <img src="_content/portfolio/480x610-1.jpg" alt="">
-                            
-                            <div class="portfolio-item-overlay">
-                                
-                                <div class="portfolio-item-description">
-                                    
-                                    <h2>Interior Design</h2>
-                                    
-                                    <p class="hidden-phone">Praesent ipsum nibh, volutpat quis diam in, pretium tempor sem. Nulla luctus tellus 
-                                    id sapien facilisis volutpat et vitae orci. Mauris id pharetra nisl, ac consequat odio. </p>
+                                    <p class="hidden-phone">RezEssentials simplifies the move-in process for incoming Northwestern students and their parents by providing a convenient solution for the sale, delivery, and move-in of essential residential elements. These products include futons, compact fridges, desk lamps, fans, and safes.</p>
                                     
                                     <a class="btn" href="portfolio-item.html">Learn more</a>
                                     
@@ -474,103 +443,15 @@
             
                         <div class="portfolio-item-preview">
                             
-                            <img src="_content/portfolio/960x610-3.jpg" alt="">
+                            <img src="http://www.northwesternstudentholdings.com/wp-content/uploads/2012/05/boxco-portfolio.jpg" alt="">
                             
                             <div class="portfolio-item-overlay">
                                 
                                 <div class="portfolio-item-description">
                                     
-                                    <h2>Interior Design</h2>
+                                    <h2>BoxCo.</h2>
                                     
-                                    <p class="hidden-phone">Curabitur risus sem, lobortis eget sapien eu, mattis aliquam ipsum. Morbi dui nisl, 
-                                    mattis id hendrerit ut, aliquet sit amet neque. </p>
-                                    
-                                    <a class="btn" href="portfolio-item.html">Learn more</a>
-                                    
-                                </div><!-- end .portfolio-item-description -->
-                                
-                            </div><!-- end .portfolio-item-overlay -->
-                            
-                        </div><!-- end .portfolio-item-preview -->
-                        
-                    </div><!-- end .portfolio-item -->
-                    
-                </div><!-- item -->
-                
-                <div class="item width-1">
-                    
-                    <div class="portfolio-item">
-            
-                        <div class="portfolio-item-preview">
-                            
-                            <img src="_content/portfolio/480x610-2.jpg" alt="">
-                            
-                            <div class="portfolio-item-overlay">
-                                
-                                <div class="portfolio-item-description">
-                                    
-                                    <h2>Interior Design</h2>
-                                    
-                                    <p class="hidden-phone">Mauris sed sodales sem. Morbi id sem in lectus volutpat malesuada eget nec neque. 
-                                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-                                    
-                                    <a class="btn" href="portfolio-item.html">Learn more</a>
-                                    
-                                </div><!-- end .portfolio-item-description -->
-                                
-                            </div><!-- end .portfolio-item-overlay -->
-                            
-                        </div><!-- end .portfolio-item-preview -->
-                        
-                    </div><!-- end .portfolio-item -->
-                    
-                </div><!-- item -->
-                
-                <div class="item width-1">
-                    
-                    <div class="portfolio-item">
-            
-                        <div class="portfolio-item-preview">
-                            
-                            <img src="_content/portfolio/480x610-3.jpg" alt="">
-                            
-                            <div class="portfolio-item-overlay">
-                                
-                                <div class="portfolio-item-description">
-                                    
-                                    <h2>Interior Design</h2>
-                                    
-                                    <p class="hidden-phone">Curabitur lobortis cursus interdum. Cras vehicula, felis ut sodales aliquam, 
-                                    risus sapien convallis turpis, at posuere leo nisi ut ex. </p>
-                                    
-                                    <a class="btn" href="portfolio-item.html">Learn more</a>
-                                    
-                                </div><!-- end .portfolio-item-description -->
-                                
-                            </div><!-- end .portfolio-item-overlay -->
-                            
-                        </div><!-- end .portfolio-item-preview -->
-                        
-                    </div><!-- end .portfolio-item -->
-                    
-                </div><!-- item -->
-                
-                <div class="item width-1">
-                    
-                    <div class="portfolio-item">
-            
-                        <div class="portfolio-item-preview">
-                            
-                            <img src="_content/portfolio/480x610-4.jpg" alt="">
-                            
-                            <div class="portfolio-item-overlay">
-                                
-                                <div class="portfolio-item-description">
-                                    
-                                    <h2>Interior Design</h2>
-                                    
-                                    <p class="hidden-phone">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos 
-                                    himenaeos. Duis egestas fermentum nibh et luctus. </p>
+                                    <p class="hidden-phone">BoxCo. provides the best in storage and shipping services at Northwestern University. BoxCo. aims to offer a more affordable and convenient service to the student body by making storage simple. BoxCo. was launched in May 2012. In addition to offering...</p>
                                     
                                     <a class="btn" href="portfolio-item.html">Learn more</a>
                                     
@@ -590,16 +471,15 @@
             
                         <div class="portfolio-item-preview">
                             
-                            <img src="_content/portfolio/960x610-1.jpg" alt="">
+                            <img src="http://www.northwesternstudentholdings.com/wp-content/uploads/2012/03/tutors_normalized.jpg" alt="">
                             
                             <div class="portfolio-item-overlay">
                                 
                                 <div class="portfolio-item-description">
                                     
-                                    <h2>Interior Design</h2>
+                                    <h2>NU|Tutors</h2>
                                     
-                                    <p class="hidden-phone">Donec tempor, sapien quis tincidunt efficitur, augue tellus accumsan nulla, sed 
-                                    efficitur sapien nulla at enim. Donec tempor accumsan mauris sit amet sagittis. </p>
+                                    <p class="hidden-phone">NU|Tutors provides individual and group tutoring for local area high school students. Since its inception, the company has helped over 300 students with their academic needs and continues to make a positive impact on the North Shore community. With a...</p>
                                     
                                     <a class="btn" href="portfolio-item.html">Learn more</a>
                                     
@@ -615,25 +495,6 @@
                 
             </div><!-- end .portfolio-grid -->
 			
-			<div class="row-container">	    
-				<div class="row">
-					<div class="span12">
-						
-						<ul class="pagination text-right">
-							<li class="current">
-								<a href="#">1</a>
-							</li>
-							<li>
-								<a href="#">2</a>
-							</li>
-							<li>
-								<a href="#">3</a>
-							</li>
-						</ul><!-- end .pagination -->
-					
-					</div><!-- end .span12 -->
-				</div><!-- end .row -->
-			</div><!-- end .row-container -->
             
 		<!-- //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////// -->
 
