--- a/Template/explore-html/_layout/css/elements.css
+++ b/Template/explore-html/_layout/css/elements.css
@@ -1244,16 +1244,21 @@
    =Team Member
    ========================================================================== */
 
-	.team-member-wrapper { margin: 0 -15px 80px -15px; }
+
+	.team-member-wrapper { 
+		margin: 0 20px;
+		display: inline-block;
+	}
 	
 	.team-member {
 		float: left;
 		width: 25%;
+		max-width:200px;
 		-webkit-box-sizing: border-box;
 		   -moz-box-sizing: border-box;
 				box-sizing: border-box;
-		padding: 0 15px;
-		margin-bottom: 30px;
+		padding: 0 10px;
+		/*margin-bottom: 30px;*/
 	}
 	
 	.team-member > img {
@@ -1269,19 +1274,22 @@
 				box-sizing: border-box;
 		margin-bottom: 25px;
 		background-color: #f6f6f6;
-		padding-bottom: 120px;			
+		height:82px;
+		/*padding-bottom: 120px;			*/
 	}
 	
 	.team-member-description-inner {
 		overflow-y: auto;
 		height: 100%;
-		padding: 30px 30px 0 30px;
+		padding: 15px;
 	}
 	
 	.team-member-description h3 {
-		margin-bottom: 0;
+		margin-bottom: 6px;
+		line-height:22px;
 		font-weight: 500;
 		text-transform: uppercase; 
+		font-size: 14px;
 	}
 	
 	.team-member .social-media {
@@ -1296,12 +1304,25 @@
 		display: inline-block;
 	}
 	
-	@media (min-width: 768px) and (max-width: 979px) {
+	/*@media (min-width: 768px) and (max-width: 979px) {*/
+	@media (max-width: 650px) {
 		
 		.team-member { width: 50%; }
 		
 	}
-	
+	@media (max-width: 900px) {
+		
+		.team-member-description h3, p { font-size: 13px; }
+
+		.team-member-description-inner {
+			padding:10px;
+		}
+		.team-member-description h3 {
+			margin-bottom: -3px;
+		}
+		
+	}
+	/*
 	@media (max-width: 767px) {
 		
 		.team-member {
@@ -1310,7 +1331,7 @@
 		}
 		
 	}
-	
+	*/
 /* ==========================================================================
    =Portfolio Item
    ========================================================================== */
