--- a/Template/explore-html/_layout/css/grid.css
+++ b/Template/explore-html/_layout/css/grid.css
@@ -373,3 +373,13 @@
 	.team-row{
 		margin: 0 auto;
 	}
+	@media (min-width: 585px) and (max-width: 650px) {
+		.team-row {
+			margin-left: 60px;
+		}
+	}
+	@media (min-width: 510px) and (max-width: 585px) {
+		.team-row {
+			margin-left: 30px;
+		}
+	}
